tests/eval_trace_nested_fail.hop
// Verifies evaluator failures include nested call traces.
import "testing" { FailingAllocator }

fn leaf() {
	new i32
}

fn middle() {
	leaf()
}

fn main() {
	context.allocator = FailingAllocator{}
	middle()
}
